buildscript {
    ext {
        jena_version = '3.17.0'
        milton_version = '2.8.0.3'
        mockitoVersion = '3.6.28'
        jacksonVersion = '2.11.3' // check what version is used by Jena
    }
}

plugins {
    id 'java'
    id 'io.franzbecker.gradle-lombok' version '4.0.0'
    id 'application'
    id 'jacoco'
//    id  'com.github.spotbugs' version '1.6.10'
    id "org.owasp.dependencycheck" version "6.0.2"
}

group 'io.fairspace'
version '1.0-SNAPSHOT'

compileJava {
    sourceCompatibility = 15
    targetCompatibility = 15
}

application {
    mainClassName = "io.fairspace.saturn.App"
    applicationDefaultJvmArgs = ['-XX:+ShowCodeDetailsInExceptionMessages']
}

repositories {
    mavenCentral()

    maven {
        url "https://dl.bintray.com/milton/Milton"
    }
}

lombok.version = "1.18.16"

jacoco.toolVersion = "0.8.6"

dependencies {
//    implementation fileTree(dir: 'libs', include: '*.jar') // jena-fuseki-server-*.jar jena-text-es-*.jar
    implementation "org.apache.jena:jena-fuseki-main:${jena_version}"
    implementation "org.apache.jena:jena-text:${jena_version}"
    implementation "org.apache.jena:jena-text-es:${jena_version}"
    implementation "io.milton:milton-server-ce:${milton_version}"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${jacksonVersion}"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
    implementation "com.sparkjava:spark-core:2.9.2"
    implementation 'com.pivovarit:throwing-function:1.5.0'
    implementation 'com.google.guava:guava:27.1-jre'
    implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.11.1'
    implementation('com.io-informatics.oss:jackson-jsonld:0.1.1') {
        exclude group: 'com.github.jsonld-java'
    }
    implementation('org.bouncycastle:bcprov-jdk15on:1.65')

    implementation 'net.logstash.log4j:jsonevent-layout:1.7'

    implementation 'org.eclipse.jetty:jetty-proxy:9.4.34.v20201102'

    implementation 'org.keycloak:keycloak-jetty94-adapter:11.0.2'
    implementation 'org.keycloak:keycloak-admin-client:11.0.2'
    implementation 'org.freemarker:freemarker:2.3.30'

    runtime 'org.slf4j:slf4j-jdk14:1.7.30'

    testImplementation "junit:junit:4.12"
    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
    testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'

//    spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.8.0'

    constraints {
//        implementation('org.elasticsearch.client:transport:6.8.2') {
//            because 'previous versions have security vulnerabilities'
//        }
//        implementation('com.fasterxml.jackson.core:jackson-databind:2.9.10.1') {
//            because 'previous versions have security vulnerabilities'
//        }
    }
}

jacocoTestReport {
    reports {
        xml.enabled false
        csv.enabled true
    }
}

dependencyCheck {
    failBuildOnCVSS=9
    suppressionFile='suppressions.xml'
}

// Plugin disabled for Java 13 - not compatible
//apply plugin: 'com.github.spotbugs'
//
//spotbugs {
//  toolVersion = '3.1.12'
//  effort = "max"
//  reportLevel = "low"
//  ignoreFailures = true
//}

//tasks.withType(com.github.spotbugs.SpotBugsTask) {
//    reports {
//        xml.enabled = false
//        html.enabled = true
//    }
//}
